reintroduce fix for focus being overlapped

--- a/packages/react/src/components/ToggleGroup/ToggleGroupItem/ToggleGroupItem.module.css
+++ b/packages/react/src/components/ToggleGroup/ToggleGroupItem/ToggleGroupItem.module.css
@@ -10,6 +10,10 @@
   padding: var(--fds-spacing-2) var(--fds-spacing-3);
 }
 
+.toggleGroupItem:focus-visible {
+  z-index: 1;
+}
+
 .toggleGroupItem:focus:not(:focus-visible) {
   outline: unset;
   box-shadow: unset;
